fix splash div overlap on social navbar

--- a/docs/_static/mxnet.css
+++ b/docs/_static/mxnet.css
@@ -566,7 +566,7 @@ li.dropdown-submenu ul.dropdown-menu a {
 }
 /*--------------------------banner---------------------------*/
 #splash{
-    padding:60px 0 0 0;
+    padding:15px 0 0 0;
     background-size:cover;
     background-attachment:fixed;
     color:#fff;
